28-May-2015 Laurent Duflot
	* makeDatasetList.py: add mc15_13TeV
	* mc15_13TeV_MCSampleList.py: updated list of samples
	* tagged as ZeroLeptonRun2-00-00-35

27-May-2015 Laurent Duflot
	* ZeroLeptonUtils, SR & CR: use recomputed MET e.g. for neg E cell veto
	* BuildSUSYObjects, ZeroLeptonDataDrivenQCD: rename recomputed MET
	to MET_ZL (avoid RefFinal as this is not the MET for rel20/mc15)

26-May-2015 Laurent Duflot
	* ZeroLeptonUtils, BuildSUSYObjects: extract jet type from container
	key and set SUSYTool property (error message for rel19 can be ignored)

25-May-2015 Laurent Duflot
	* parametrise also the tau and MET container keys (for rel19 vs rel20)

22-May-2015 Laurent Duflot
	* MCEventVeto: add option for container key
	* PileUpRWProcessor: no pileup reweighting for mc15_13TeV
	* BuildSUSYObjects, config files: add option for Electron container key
	* BuildSUSYObjects, config files: add option for Photon container key

21-May-2015 Laurent Duflot
	* PhysObjProxyUtils: bug fix in protection against events with <2 jets
	(the bug caused no bias but the protection was not effective)

20-May-2015 Laurent Duflot
	* previous problems with SUSYTools-00-05-00-30 understood to be due
	to a bug in overlap removal.
	* adapt to SUSYTools-00-05-00-31  (BuildSUSYObjects)
	changes in ttbar cutflow compared to ZeroLeptonRun2-00-00-32 are small.
	* tag ZeroLeptonRun2-00-00-34

14-May-2015 Laurent Duflot
	* ZeroLeptonCRY, PhysObjProxies: remove isolation in PhotonProxy and
	NTCRYVars block since not used directly in IsSignalPhoton that now
	uses the isolation tool.
	* PhysObjProxyUtils: add protection against events with <2 jets

14-May-2015 Laurent Duflot
	* adapt to SUSYTools-00-05-00-30:
	CosmicMuon vetoes 5 x more events  -> to be understood
	ttbar: -20% in SR and -10% in CRWT
	* tag ZeroLeptonRun2-00-00-33

14-May-2015 Laurent Duflot
	* add python/mc15_13TeV_MCSampleList.py with preliminary mc15 samples
	* tag ZeroLeptonRun2-00-00-32

13-May-2015 Laurent Duflot