@@ -25,7 +25,9 @@ FilterUpdateMerge::FilterUpdateMerge(SUSY::CrossSectionDB* xsecDB):
 void  FilterUpdateMerge::process(TTree* outTree, const std::string& inTreeName, 
 				 const std::vector<std::string>& inFiles, 
 				 bool isSignal, bool doXSecNormalisation, 
-				 bool doFiltering, bool doExtraVars)
+				 bool doFiltering, bool doExtraVars, 
+				 bool doCRWTVars, bool doCRZVars, 
+				 bool doCRYVars)
 {
   // book output tuple variables
   NTVars outVars;
@@ -37,6 +39,15 @@ void  FilterUpdateMerge::process(TTree* outTree, const std::string& inTreeName,
   NTExtraVars inExtraVars, outExtraVars;
   if ( doExtraVars ) bookNTExtraVars(outTree,outExtraVars);
 
+  NTCRWTVars inCRWTVars, outCRWTVars;
+  if ( doCRWTVars ) bookNTCRWTVars(outTree,outCRWTVars);
+
+  NTCRZVars inCRZVars, outCRZVars;
+  if ( doCRZVars ) bookNTCRZVars(outTree,outCRZVars);
+
+  NTCRYVars outCRYVars;
+  if ( doCRYVars ) bookNTCRYVars(outTree,outCRYVars);
+
   // read, update, filter, copy
   unsigned int previousRun = 0;
   float rel_uncertainty = 0.;
@@ -44,6 +55,7 @@ void  FilterUpdateMerge::process(TTree* outTree, const std::string& inTreeName,
   float xsec = 0.;
   NTVarsRead inVars;
   NTReclusteringVarsRead inRTVars;
+  NTCRYVarsRead inCRYVars;
   for ( std::size_t i = 0; i < inFiles.size(); ++i ){
     TFile* f = TFile::Open(inFiles[i].c_str());
     if ( !f || f->IsZombie() ) throw std::runtime_error("Could not open "+inFiles[i]);
@@ -52,13 +64,19 @@ void  FilterUpdateMerge::process(TTree* outTree, const std::string& inTreeName,
     inVars.setAddresses(tree);
     inRTVars.setAddresses(tree);
     if ( doExtraVars ) tree->GetBranch("NTExtraVars")->SetAddress(&inExtraVars.mettrack);
+    if ( doCRWTVars ) tree->GetBranch("NTCRWTVars")->SetAddress(&inCRWTVars.lep1Pt);
+    if ( doCRZVars ) tree->GetBranch("NTCRZVars")->SetAddress(&inCRZVars.lep1Pt);
+    if ( doCRYVars) inCRYVars.setAddresses(tree);
 
     // loop over entries
     for ( size_t j = 0; j < tree->GetEntries(); ++j ) {
       tree->GetEntry(j);
       outVars = inVars.ntv;
       outRTVars = inRTVars.RTntv;
+      outCRYVars = inCRYVars.ntv;
       if ( doExtraVars) outExtraVars = inExtraVars;
+      if ( doCRWTVars) outCRWTVars = inCRWTVars;
+      if ( doCRZVars) outCRZVars = inCRZVars;
 
       if ( doFiltering  && !acceptEvent(inVars.ntv) ) continue;
 
